<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="connect">Connect</string>
    <string name="port">port</string>
    <string name="client_port">port</string>
    <string name="client_address">address</string>
    <string name="client">CLIENT</string>
    <string name="word">word</string>
    <string name="search">Search</string>
</resources>